version 1.4.2
=============

* src/fth.c:

	Evaluation from standard input prints stack result if any to
	standard output:

        echo "80 f2c" | tee foo | fth -    => 26.6667
        cat foo | fth -                    => 26.6667
        fth - < foo                        => 26.6667

* src/regexp.c new function and constants added:

        int fth_regexp_find_flags(const char *reg, const char *str, int flags);
        REG_BASIC
        REG_NOSPEC
        REG_PEND

version 1.4.1
=============

* log1p for log(x + 1) and expm1 for exp(x) - 1 (thanks to Sanjay Jain!)

        alias flog1p added for flogp1

* new fenv(3) words and corresponding constants:

        fegetround ( -- n )
        fesetround ( n -- )
        FE_TONEAREST
        FE_DOWNWARD
        FE_UPWARD
        FE_TOWARDZERO

version 1.4.0
=============

* libcrypto/openssl dependency removed

* bignum and ratio

	multi-precision library added from
	/usr/xsrc/external/mit/xedit/dist/lisp/mp/mp*.[ch] to ./lib/ for
	bignum and ratio numbers

* new bignum words in src/numbers.c and tests/numbers.fs

        bgcd  ( x y -- z )       z = gcd(x, y)
        blcm  ( x y -- z )       z = lcm(x, y)
        broot ( b1 u -- b2 n )   b2 = root(b1, u); n=1 if exact, n=0 otherwise
        bsqrt ( b1 -- b2 n )     b2 = sqrt(b1);  n=1 if exact, n=0 otherwise
        bmod  ( b1 b2 -- b3 )    b3 = b1 % b2
        b/mod ( b1 b2 -- b3 b4 ) b1 / b2;  b3 = reminder;  b4 = quotient 
